fixed html formatting and nav bar spacing

--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,6 @@ body {
   height: 100%;
 }
 .container {
-  position: absolute;
   margin: auto;
   top: 0;
   right: 0;
@@ -143,8 +142,13 @@ body {
   left: 0;
   width: 800px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #bc9055;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: row;
 }
 @media (max-width: 500px) {
   .container {
@@ -156,9 +160,10 @@ body {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 10px;
+  width: 100%;
+  margin-right: 50px;
 }
 .nav_pic {
-  width: 50%;
   height: 40%;
 }
 .nav_bar {
